--- a/day.rs.template
+++ b/day.rs.template
@@ -5,8 +5,7 @@ fn solve(_lines: &Vec<&str>) -> i32 {
 }
 
 pub fn run(data: &str, check: bool) -> Result {
-    let s = data.to_string();
-    let lines: Vec<&str> = s.split('\n').filter(|&s| !s.is_empty()).collect();
+    let lines = data.split('\n').collect();
 
     let ans1 = solve(&lines);
     println!("Part1: {}", ans1);
